First version of Objectives

--- a/report.tex
+++ b/report.tex
@@ -39,6 +39,18 @@
 %----------------------------------------------------
 %NAVobjectives
 \section{Objectives (1pg)}
+The aim of this project is to provide architects -- or anyone interested in creating 3D models/geometry -- with an environment that fosters the Generative Design approach while being accessible wherever they are working.
+
+This aim can be further decomposed into the following.
+The result of this project should:
+\begin{enumerate}
+	\item Be accessible wherever the architect is working; \label{obj:access}
+	\item Be easy to start working with -- i.e. without a middle step to install it; \label{obj:no-install}
+	\item Encourage good programming practices; \label{obj:good-prog-practs} 
+	\item Provide a pleasant user experience -- to maximize productivity; \label{obj:good-exp}
+	\item Allow easy exportation of created 3D models to other modeling software -- to be easily integrated with the user's working process. \label{obj:inter-op}
+\end{enumerate}
+
 
 %----------------------------------------------------
 %NAVrelatedwork
