--- a/report.tex
+++ b/report.tex
@@ -41,13 +41,25 @@
 \section{Objectives (1pg)}
 The aim of this project is to provide architects -- or anyone interested in creating 3D models/geometry -- with an environment that fosters the Generative Design approach while being accessible wherever they are working.
 
+%Why does it need to be accessible wherever the architect is?
+Architects imagine buildings and will have to move their ideas to outside of their heads wherever they are; if they don't, they might forget them never recalling them again. We have to provide a means to translate ideas and it has to be accessible wherever they are.\textsuperscript{citation needed}
+
+How can we provide a means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
+
+Writing a program can degenerate into writing a sequence of atomic instructions if the author doesn't know how to simplify it \textsuperscript{citation needed}. We can't assume that architects are taught how to program\textsuperscript{citation needed}; it is our responsibility to encourage them to follow good programming practices and to make following those practices easy.
+
+There are many well established tools that architects use to translate their ideas; if we're going to come up with a solution that can rival them than it must be as easy to try out as possible; and it also has to provide a way to export results into those tools.
+
 This aim can be further decomposed into the following.
-The result of this project should:
+Summing up, the result of this project should:
 \begin{enumerate}
 	\item Be accessible wherever the architect is working; \label{obj:access}
-	\item Be easy to start working with -- i.e. without a middle step to install it; \label{obj:no-install}
-	\item Encourage good programming practices; \label{obj:good-prog-practs} 
-	\item Provide a pleasant user experience -- to maximize productivity; \label{obj:good-exp}
+	\item Encourage the Generative Design approach, which implies: label{obj:gen-design}
+	\begin{enumerate}
+		\item Encouraging good programming practices; \label{obj:good-prog-practs} 
+		\item Making writing programs easy; \label{obj:easy-program}
+	\end{enumerate}
+	\item Be as easy to try out as possible -- i.e. without a middle step to install it; \label{obj:no-install}
 	\item Allow easy exportation of created 3D models to other modeling software -- to be easily integrated with the user's working process. \label{obj:inter-op}
 \end{enumerate}
 
