Related Work version 1.

--- a/report.tex
+++ b/report.tex
@@ -50,7 +50,6 @@ Writing a program can degenerate into writing a sequence of atomic instructions 
 
 There are many well established tools that architects use to translate their ideas; if we're going to come up with a solution that can rival them than it must be as easy to try out as possible; it also has to provide a way to export results into those tools.
 
-This aim can be further decomposed into the following.
 Summing up, the result of this project should:
 \begin{enumerate}
 	\item Be accessible wherever the architect is working; \label{obj:access}
@@ -67,6 +66,13 @@ Summing up, the result of this project should:
 %----------------------------------------------------
 %NAVrelatedwork
 \section{Related Work (~17pgs)}
+In this section we start by describing work done on making programming easy for everyone and extract the principles that should be followed to achieve it.
+
+We move on to present some of the current widely used solutions -- or environments -- in the Generative Design community and evaluate their conformance with the principles defined earlier.
+
+\subsection{Programming for Everyone}
+Making programming easy for everyone has been an active area of research for many years. Some examples of systems made with the purpose of introducing people to programming -- the pedagogic way -- were Logo\cite{papert1999logo} and Smalltalk\cite{goldberg1983smalltalk}. Their authors are great defenders of the notion that learning how to solve/understand problems with a computer is a greater way of learning than the traditional soak-it-all-up way -- an example of that is the Dynabook\cite{Kay:2011:PCC:800193.1971922} a handheld computer prototype where programming was a first-class citizen.
+
 
 %----------------------------------------------------
 %NAVarchitecture
