--- a/report.tex
+++ b/report.tex
@@ -71,7 +71,7 @@ In this section we start by describing work done on making programming easy for 
 We move on to present some of the current widely used solutions -- or environments -- in the Generative Design community and evaluate their conformance with the principles defined earlier.
 
 \subsection{Programming for Everyone}
-Making programming easy for everyone has been an active area of research for many years. Some examples of systems made with the purpose of introducing people to programming -- the pedagogic way -- were Logo\cite{papert1999logo} and Smalltalk\cite{goldberg1983smalltalk}. Their authors are great defenders of the notion that learning how to solve/understand problems with a computer is a greater way of learning than the traditional soak-it-all-up way -- an example of that is the Dynabook\cite{Kay:2011:PCC:800193.1971922} a handheld computer prototype where programming was a first-class citizen.
+Making programming easy for everyone has been an active area of research for many years. Some examples of programming languages designed with introducing people to programming were Logo\cite{papert1999logo} -- where the programmer explains the meaning of new words to a turtle -- and Smalltalk\cite{goldberg1983smalltalk} -- where a program the way a group of objects exchanges messages to solve a problem. Their authors are great defenders of the notion that learning how to solve/understand problems with a computer is a greater way of learning since it is a dynamic medium -- an example of that is the Dynabook\cite{Kay:2011:PCC:800193.1971922} a handheld computer prototype for children where programming was a first-class citizen.
 
 
 %----------------------------------------------------
