Related work v3 - Learnable Programming Environment v1

--- a/report.bib
+++ b/report.bib
@@ -25,3 +25,11 @@ title = {{A Personal Computer for Children of All Ages}},
 url = {http://bitsavers.org/pdf/xerox/smalltalk/Kay\_\_A\_Personal\_Computer\_For\_Children\_Of\_All\_Ages\_Aug72.pdf},
 year = {1972}
 }
+@article{victor2012learnable,
+abstract = {Programming is a way of thinking, not a rote skill. Learning about "for" loops is not learning to program, any more than learning about pencils is learning to draw.$\backslash$n    People understand what they can see. If a programmer cannot see what a program is doing, she can't understand it.$\backslash$n$\backslash$nThus, the goals of a programming system should be:$\backslash$n$\backslash$n    to support and encourage powerful ways of thinking$\backslash$n    to enable programmers to see and understand the execution of their programs},
+author = {Victor, Bret},
+journal = {Worrydream. com},
+title = {{Learnable Programming}},
+url = {http://worrydream.com/LearnableProgramming/},
+year = {2012}
+}
