Related work v4 - LP v2

--- a/report.tex
+++ b/report.tex
@@ -113,7 +113,11 @@ The environment should allow the programmer to \emph{see the state} of the progr
 
 The environment should allow the programmer to \emph{create by reacting} to the environment so that he can ``start with something, than adjust until it's right''. To make it possible, the environment must make it easy to experiment; it must make trying/adding things as fast as the programmer can think of them and also make what can be done obvious. Bret Victor clearly states that this should be like painting. When the user tries things, he doesn't completely know what he's going to get; if what he gets is not right he changes it.
 
-The environment should allow the programmer to \emph{create by abstracting} parts of the program so that he can ``Start concrete (...) then gradually generalize (...), in such a way that he still fully understands the program at each level of abstraction''. The environment must make it easy to generalize parts of the program either by introducing new variables, by introducing loops or by creating functions. In other more general words: make it easy to generalize using the language's decomposition mechanisms. 
+The environment should allow the programmer to \emph{create by abstracting} parts of the program so that he can start by writing a concrete case, then generalizing it. The environment must ``provide ways to gradually and seamlessly transitioning constant expressions'' and also ``provide ways of using those variable expressions at a higher level''. In other more general words: make it easy to generalize using the language's decomposition mechanisms. 
+
+The language should provide an \emph{identity and metaphor} so that the programmer can relate to the program. Those provided enable the programmer to use his knowledge about the world to solve the problem he is trying to solve by writing a program in the language.
+
+
 
 %----------------------------------------------------
 %NAVarchitecture
