First revision of Learnable Programming finished.

--- a/report.tex
+++ b/report.tex
@@ -101,7 +101,7 @@ The principles for the language state what it should provide. It should provide:
 	\item \label{lp:lang:read} readability
 \end{enumerate}
 
-These principles are then further explained following the same order.
+These principles are then further explained following the same order. When talking about the principles over the environment, Bret gives examples that follow each principle; those examples aren't included here since they are solutions to a specific case. When talking about principles over the language, he gives examples of languages that follow and don't follow -- and how -- each principle; those are also not included here.
 
 The environment should allow the programmer to \emph{read the vocabulary} so that the he can quickly shift his attention to ``how the steps are weaved together''. That is, as he is reading, the environment should make it easy to understand what each word means; each word's meaning should be made clear in an appropriate context -- or more if necessary.
 %How can I say that the environment can use any means necessary to achieve it?
@@ -115,8 +115,13 @@ The environment should allow the programmer to \emph{create by reacting} to the 
 
 The environment should allow the programmer to \emph{create by abstracting} parts of the program so that he can start by writing a concrete case, then generalizing it. The environment must ``provide ways to gradually and seamlessly transitioning constant expressions'' and also ``provide ways of using those variable expressions at a higher level''. In other more general words: make it easy to generalize using the language's decomposition mechanisms. 
 
-The language should provide an \emph{identity and metaphor} so that the programmer can relate to the program. Those provided enable the programmer to use his knowledge about the world to solve the problem he is trying to solve by writing a program in the language.
+The language should provide a good \emph{identity and metaphor} so that the programmer can easily relate to the program he is writing. These provided enable the programmer to use his knowledge about the world to solve the problem he is trying to solve by writing a program in the language. 
 
+The language should provide \emph{decomposition} so that the programmer can ``breakdown the program into "mind-size bites"''. It should encourage him to decompose the problem because decomposing is essential for understanding it.
+
+The language should provide \emph{recomposition} so that the programmer can safely reuse parts. It should encourage him to ``grab parts of other programs, assemble them together, modify them, build on top of them'' thus ``giving him the initial material to "create by reacting"''.
+
+The language should provide \emph{readability} so that the programmer can ``look at a line of code and know what it means''; the meaning of a line of code shouldn't be ambiguous. Its syntax and names matter, i.e. the syntax should provide context to its elements and the names should clearly pinpoint what they represent within their context. It should be readable even without a fancy programming environment.
 
 
 %----------------------------------------------------
